crates/lk-cli/tests/snapshots/behaviour__graph_normalize.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
all slugs normalized
--- stderr ---
