crates/lk-cli/tests/snapshots/behaviour__graph_suggest_links.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
(no link suggestions)
--- stderr ---
