crates/lk-cli/tests/snapshots/behaviour__health.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---

0 fresh, 0 stale, 0 never
