crates/lk-cli/tests/snapshots/behaviour__performance.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---
No work-log data found at me/work-log.
