crates/lk-cli/tests/snapshots/behaviour__queue_count.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
0
--- stderr ---
