crates/lk-cli/tests/snapshots/behaviour__queue_status.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---
queue: 0 current, 0 done, 0 stale, 0 missing-target across 0 task(s)
