crates/lk-cli/tests/snapshots/behaviour__resolve_BehaviourSnapshot.snap
---
source: crates/lk-cli/tests/behaviour.rs
assertion_line: 277
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
behaviour-snapshot	Behaviour snapshot	wiki/concepts/behaviour-snapshot.md
--- stderr ---
