crates/lk-cli/tests/snapshots/behaviour__resolve_nothing_answers_to_this.snap
---
source: crates/lk-cli/tests/behaviour.rs
assertion_line: 277
expression: "observe(staged.path(), argv)"
---
exit: 1
--- stdout ---
--- stderr ---
no concept page answers to `nothing-answers-to-this`
